--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,23 @@
     <string name="app_name">定格拍摄</string>
     <string name="add_anim">确定</string>
     <string name="preference_key">app_preference_key</string>
+
+    <string name="project_name">项目名称</string>
+    <string name="project_memo">项目备注</string>
+    <string name="project_desc">项目简介</string>
+    <string name="project_cover">项目封面</string>
+    <string name="project_logo">项目Logo</string>
+    <string name="project_fps">播放帧率</string>
+    <string name="project_count">照片数量</string>
+    <string name="project_save">保存项目</string>
+    <string name="project_del">删除项目</string>
+    <string name="long_str">很长很长很长很长很长很长的一段很长很长很长很长很长很长的文字。如果觉得不够长还可以继续很长很长很长很长很长很长的写一段很长很长很长很长很长很长的文字</string>
+
+    <string name="cancel">取消</string>
+    <string name="confirm">确定</string>
+    <string name="delete">删除</string>
+    <string name="edit">编辑</string>
+    <string name="save">保存</string>
+    <string name="play">播放</string>
+    <string name="pause">暂停</string>
 </resources>
